--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,5 +1,5 @@
-<%= search_form_for @q, url: search_items_path, class: 'search-form', id: 'item-search-form' do |f| %>
-  <div class='form'>
+<%= search_form_for @q, url: search_items_path, class: 'header-search-form', id: 'item-search-form' do |f| %>
+  <div class='search-form'>
     <%= f.label :name_or_shop_name_i_cont, 'キーワード検索' %>
     <br>
     <%= f.search_field :name_or_shop_name_i_cont %>
@@ -15,17 +15,17 @@
       </li>
     </ul>
   </div>
-  <div class='form'>
+  <div class='search-form'>
     <%= f.label :category_category_name_id_eq, 'カテゴリー' %>
     <br>
     <%= f.collection_select :category_category_name_id_eq, @category_name, :id, :name, include_blank: '指定なし' %>
   </div>
-  <div class='form'>  
+  <div class='search-form'>  
     <%= f.label :color_id_eq, 'カラー' %>
     <br>
     <%= f.collection_select :color_id_eq, @item_color, :id, :name, include_blank: '指定なし' %>
   </div>
-  <div class='form'>
+  <div class='search-form'>
     <%= f.label :price, '価格' %>
     <br>
     <%= f.number_field :price_gteq %>円〜
