--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,58 +1,117 @@
-<%= image_tag @item.image.variant(resize: '750x750') %>
-<div>
-  購入内容の確認
-</div>
-<div>
-  <%= @item.name %>
-</div>
-<div>
-  金額：¥<%= @item.price %>
-</div>
-<div>
-  送料：¥500（全国一律）
-</div>
-<div>
-  合計：¥<%= @item.price + 500 %>
-</div>
+<div class='form-background order-back'>
+  <%= render "shared/title_header" %>
 
-<%= form_with model: @order_address, url: item_orders_path, id: 'charge-form', local: true do |f| %>
-  <%= render 'shared/error_messages', model: f.object %>
-  <p>クレジットカード情報</p>
-  <div>
-  カード情報<%= f.text_field 'number', id: 'card-number', placeholder:"カード番号(半角英数字)", maxlength:"16"%>
-  </div>
-  <div>
-  有効期限<%= f.text_area 'exp_month', id: 'card-exp-month', placeholder:"例)3" %>月/ <%= f.text_area 'exp_year', id: 'card-exp-year', placeholder:"例)23" %>年
-  </div>
-  <div>
-  セキュリティコード<%= f.text_field "cvc", id: 'card-cvc', placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
-  </div>
+  <%= form_with model: @order_address, url: item_orders_path, class: 'form-main', local: true do |f| %>
+  <div class='form order-item'>
+    <div class='form-header'>
+      <h2 class='form-title'>購入内容確認</h2>
+    </div>
 
-  <p>配送先</p>
-  <div>
-  名前
-  <%= f.text_area :last_name, placeholder:"例) 佐藤" %>
-  <%= f.text_area :first_name, placeholder:"例) かぐ太" %>
+    <div class='order-item-confirmation'>
+      <%= image_tag @item.image, class: 'order-img' %>
+      <div class='order-item-info'>
+        <p class='order-item-name'><%= @item.name %></p>
+        <p class='order-item-price'>
+          金額：¥<%= @item.price %>
+          <span class='order-item-tax'>（税込）</span>
+        </p>
+        <p class='order-shipping-fee'>送料：¥500（全国一律）</p>
+        <p class='order-total-price'>合計：¥<%= @item.price + 500 %></p>
+      </div>
+    </div>
+
+    <%= render 'shared/error_messages', model: f.object %>
+
+    <div class='order-card-form'>
+      <h3 class='order-middle-title'>クレジットカード情報</h3>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>カード情報</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= f.text_field 'number', class: 'input-default', placeholder:"カード番号(半角英数字)", maxlength:"16"%>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>有効期限</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <div class='card-exp-group'>
+          <%= f.text_area 'exp_month', class: 'card-exp', placeholder:"例)3" %>月/ <%= f.text_area 'exp_year', class: 'card-exp', placeholder:"例)23" %>年
+        </div>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>セキュリティコード</label>
+          <span class='indispensable'>必須</span>
+        </div>
+          <%= f.text_field "cvc", class: 'input-default card-cvc', placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+      </div>
+    </div>
+
+    <div class='order-address'>
+      <h3 class='order-middle-title'>配送先</h3>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>お名前(全角)</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <div class='input-name-group'>
+          <%= f.text_area :last_name, class:"input-name", placeholder:"例) 佐藤" %>
+          <%= f.text_area :first_name, class:"input-name", placeholder:"例) かぐ太" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>郵便番号</label>
+          <span class='indispensable'>必須</span>
+        </div>
+      <%= f.text_field :postal_code, class:"input-default", placeholder:"例) 123-4567" %>
+      </div> 
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>都道府県</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <div class='input-prefecture'>
+          <%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {class:"select-box"}) %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>市区町村</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= f.text_field :city, class:"input-default", placeholder:"例) 札幌市中央区" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>番地</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= f.text_field :address_line_1, class:"input-default", placeholder:"例) 南1-2-3" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>建物名</label>
+          <span class='indispensable'>任意</span>
+        </div>
+        <%= f.text_field :address_line_2, class:"input-default", placeholder:"例) 北斗ビル202" %>
+      </div>  
+      <div class="form-group">
+        <div class='form-text-group'>
+          <label class='form-text'>電話番号</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= f.text_field :phone_number, class:"input-default", placeholder:"例) 08011112222", maxlength:"11" %>
+      </div>
+    </div>
+
+    <div class="form-button">
+      <%= f.submit "購入", class: 'registration-button' %>
+    </div> 
   </div>
-  <div>
-  郵便番号<%= f.text_field :postal_code, placeholder:"例）123-4567", maxlength:"8"%>
-  </div>
-  <div>
-  都道府県<%= f.collection_select(:state_province_id, StateProvince.all, :id, :name, {}, {}) %>
-  </div>
-  <div>
-  市区町村<%= f.text_field :city, placeholder:"例) 札幌市中央区" %>
-  </div>
-  <div>
-  番地<%= f.text_field :address_line_1, placeholder:"例) 南1-2-3" %>
-  </div>
-  <div>
-  建物名<%= f.text_field :address_line_2, placeholder:"例) 北斗ビル202" %>
-  </div>
-  <div>
-  電話番号<%= f.text_field :phone_number, placeholder:"例) 08011112222", maxlength:"11" %>
-  </div>
-  <div>
-  <%= f.submit "購入" ,class:"buy-red-btn" %>
-  </div>
-<% end %>
+  <% end %>
+
+  <%= render "shared/footer" %>
+</div>
