--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,45 +1,97 @@
-<div>
-<%= @shop.name %>
-</div>
-<div>
-<%= @item.name  %>
-</div>
+<div class='form-background new-item-back'>
+  <%= render "shared/title_header" %>
 
-<%= form_with model: @item_category, url: shop_item_path(@shop.id, @item.id), local: true do |form| %>
-  <%= render "shared/error_messages", model: form.object %>
-  
-  <div>
-    <%= form.label :image, '商品画像' %>
-    <%= form.file_field :image %>
+  <%= form_with model: @item_category, url: shop_item_path(@shop.id, @item.id), class: 'form-main', local: true do |form| %>
+  <div class='form item-for-sale'>
+    <div class='form-header'>
+      <h2 class='form-title'><%= "#{@item.name}の編集" %></h2>
+    </div>
+
+    <%= render "shared/error_messages", model: form.object %>
+
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>商品画像</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='click-upload'>
+        <p class='upload-attention'>クリックしてファイルをアップロード</p>
+        <%= form.file_field :image %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>商品名</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= form.text_field :name, class:"input-default", placeholder:"商品名（40文字まで）" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>商品情報</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= form.text_area :info, class:"item-info-input input-info", placeholder:"商品説明（1,500文字まで）(色、素材、注意点など）" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>サイズ</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= form.text_area :size, class:"item-info-input input-size", placeholder:"サイズ（200文字まで）（縦×横×高さ、重さなど）" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>カテゴリー</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-prefecture'>
+        <%= form.collection_select(:category_name_id, CategoryName.all, :id, :name, {include_blank: "--"}, {class:"select-box"}) %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>色</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-prefecture'>
+        <%= form.collection_select(:color_id, Color.all, :id, :name, {include_blank: "--"}, {class:"select-box"}) %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>価格<br>(¥100~9,999,999)</label>
+      </div>
+      <div class='price-form'>
+        <div class="price-content">
+          <div class="price-text">
+            <span>価格(税込）</span>
+            <span class="indispensable">必須</span>
+          </div>
+          <span class="sell-yen">¥</span>
+          <%= form.text_field :price, class:"price-input", id:"item-price", placeholder:"例）8500" %>
+        </div>
+        <div class="price-content">
+          <span>消費税 (10%)</span>
+          <span>
+            <span id='tax-price'></span>円
+          </span>
+        </div>
+        <div class="price-content">
+          <span>税抜価格</span>
+          <span>
+            <span id='excluding-tax'></span>円
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-button">
+      <%= form.submit "変更する", class: 'submit-button item-change-btn' %>
+    </div>
   </div>
-  <div>
-    <%= form.label :name, '商品名' %>
-    <%= form.text_field :name %>
-  </div>
-  <div>
-    <%= form.label :info, '商品情報' %>
-    <%= form.text_area :info %>
-  </div>
-  <div>
-    <%= form.label :size, 'サイズ' %>
-    <%= form.text_area :size %>
-  </div>
-  <div>
-    <%= form.label :category_name_id, 'カテゴリー' %>
-    <%= form.collection_select(:category_name_id, CategoryName.all, :id, :name, {include_blank: "--"}, {}) %>
-  </div>
-  <div>
-    <%= form.label :color_id, '色' %>
-    <%= form.collection_select(:color_id, Color.all, :id, :name, {include_blank: "--"}, {}) %>
-  </div>
-  <div>
-    <%= form.label :price, '価格' %>
-    <%= form.text_field :price %>
-  </div>
-  <div>
-    <%= form.submit '変更する' %>
-  </div>
-  <div>
-    <%= link_to 'もどる', shop_item_path(@shop.id, @item.id) %>
-  </div>
-<% end %>
+  <% end %>
+
+  <%= render "shared/footer" %>
+</div>
