--- a/app/assets/stylesheets/owners/new.scss
+++ b/app/assets/stylesheets/owners/new.scss
@@ -1,10 +1,6 @@
+/* 共通 */
 .form-background {
   background-size: cover;
-}
-
-.owner-registration-back {
-  background-color: rgb(150, 151, 151);
-  background-image: image-url("registration_13.jpeg");
 }
 
 .form-main {
@@ -19,11 +15,6 @@
   border-radius: 25px;
   padding: 3%;
   overflow: scroll;
-}
-
-.owner-registration {
-  width: 45vw;
-  background-color:#f5f5f5;
 }
 
 .form-header {
@@ -48,6 +39,16 @@
 
 .form-text {
   font-size: 1.1em;
+  font-weight: bold;
+}
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
   font-weight: bold;
 }
 
@@ -135,6 +136,18 @@
   height: 7vh;
   font-size: 1em;
   cursor: pointer;
+}
+
+
+/* owner新規登録 */
+.owner-registration-back {
+  background-color: rgb(150, 151, 151);
+  background-image: image-url("registration_13.jpeg");
+}
+
+.owner-registration {
+  width: 45vw;
+  background-color:#f5f5f5;
 }
 
 .owner-registration-btn {
